--- a/pages/Company/index.css
+++ b/pages/Company/index.css
@@ -132,7 +132,6 @@ main .submenu .btn svg {
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 20px;
     z-index: 2;
     background: rgba(20, 14, 23, 0.5);
 }
@@ -142,14 +141,16 @@ main .submenu .btn svg {
 }
 
 .modal-wrapper .modal-company {
-    display: flex;
-    flex-direction: column;
     height: 100%;
     width: 540px;
-    padding: 24px;
-    overflow: scroll;
+    overflow: auto;
     border-radius: 8px;
     background-color: var(--white);
+}
+
+.modal-wrapper .modal-company > div {
+    min-height: 100%;
+    padding: 24px;
 }
 
 .modal-wrapper .modal-nav {
@@ -162,7 +163,7 @@ main .submenu .btn svg {
 }
 
 .modal-wrapper .step-item {
-    width: 120px;
+    width: 200px;
     cursor: pointer;
 }
 
