--- a/pages/SignUpSignIn/index.css
+++ b/pages/SignUpSignIn/index.css
@@ -24,7 +24,7 @@ main .container-content {
     width: 100%;
     min-height: 100vh;
     padding: 20px;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 main .container-content .content {
@@ -37,7 +37,7 @@ main .container-content .content {
 /*Aside*/
 
 aside {
-    min-width: 448px;
+    width: 448px;
     min-height: 100vh;
     padding: 20px 20px 20px 0;
 }
