add "All events" in Admin page

--- a/pages/admin/admin.css
+++ b/pages/admin/admin.css
@@ -161,7 +161,7 @@
     margin-right: 8px;
 }
 
-.snippet .event-card .join-link {
+.join-link {
     display: block;
     background-color: #A24DE8;
     color: #FFFFFF;
