--- a/pages/SignUpSignIn/index.css
+++ b/pages/SignUpSignIn/index.css
@@ -2,6 +2,16 @@
     color: var(--dark);
 }
 
+h2 {
+    font-size: 36px;
+    line-height: 44px;
+}
+
+h4 {
+    font-size: 20px;
+    line-height: 28px;
+}
+
 main {
     position: relative;
     display: flex;
@@ -37,7 +47,8 @@ main .container-content .content {
 /*Aside*/
 
 aside {
-    width: 448px;
+    flex: 1;
+    min-width: 448px;
     min-height: 100vh;
     padding: 20px 20px 20px 0;
 }
@@ -67,12 +78,12 @@ aside .side-menu .btn-wrap {
 
 aside .side-menu .btn-wrap .button {
     width: 182px;
-    padding: 16px;
+    padding: 22px;
     border: none;
     border-radius: 8px;
     background-color: transparent;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 28px;
     color: var(--gray-700);
     cursor: pointer;
@@ -88,16 +99,16 @@ aside .side-menu .btn-wrap .button-active {
 .text-field__input {
     display: block;
     width: 100%;
-    height: 72px;
-    padding: 36px 40px 12px 14px;
+    height: 56px;
+    padding: 28px 40px 8px 12px;
     border: 1px solid var(--gray-400);
     border-radius: 8px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .text-field_floating.field-error .text-field__input {
@@ -129,31 +140,36 @@ aside .side-menu .btn-wrap .button-active {
 .text-field_floating .text-field__label,
 .text-field_floating .text-field__label-error {
     position: absolute;
-    top: 25px;
-    left: 16px;
+    top: 18px;
+    left: 12px;
     height: 100%;
     pointer-events: none;
     transform-origin: 0 0;
     transition: all .15s ease-in-out;
     color: #9E9E9E;
     font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .icon-password {
     display: flex;
     position: absolute;
-    top: 25px;
-    right: 16px;
-    width: 24px;
-    height: 24px;
+    top: 18px;
+    right: 11px;
+    width: 20px;
+    height: 20px;
     align-items: center;
     transition: all .15s ease-in-out;
 }
 
 .icon-password.eye-open .icon-eye-close {
     display: none;
+}
+
+.icon-password svg {
+    width: 20px;
+    height: 20px;
 }
 
 .icon-password .icon-eye-open {
@@ -193,9 +209,9 @@ aside .side-menu .btn-wrap .button-active {
 .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label,
 .text-field_floating .text-field__input:focus~.text-field__label-error,
 .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label-error {
-    transform: translateY(-14px);
-    font-size: 14px;
-    line-height: 20px;
+    transform: translateY(-10px);
+    font-size: 12px;
+    line-height: 16px;
     text-transform: uppercase;
 }
 
@@ -215,14 +231,14 @@ form .text-field .password-description {
     margin: 4px 0 0 16px;
     color: var(--gray-600);
     font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 12px;
+    line-height: 16px;
 }
 
 form .form-bottom {
     display: flex;
     flex-direction: column;
-    margin-top: 32px;
+    margin-top: 22px;
 }
 
 /*Checkbox */
@@ -230,64 +246,71 @@ form .form-bottom {
 .div {
     justify-content: flex-start;
     padding: 0;
-    margin-bottom: 34px;
+    margin-bottom: 22px;
+}
+
+.form-bottom .div {
+    padding-left: 4px;
 }
 
 .div .custom-checkbox + label:before {
-    width: 24px;
-    height: 24px;
+    width: 16px;
+    height: 16px;
     border-color: var(--dark);
 }
 
 .div .custom-checkbox + label {
-    align-items: end;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 24px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .div label:before {
-    margin-right: 16px;
+    margin-right: 14px;
 }
 
 /*Button*/
 
 .btn {
-    margin-bottom: 35px;
-    padding: 24px;
-    font-size: 18px;;
+    margin-bottom: 28px;
+    padding: 18px;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 /*Google auth*/
 
 .google-title {
-    margin-bottom: 18px;
+    margin-bottom: 16px;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 20px;
     color: #9E9E9E;
 }
 
 .google-link-wrap {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-between;
 }
 
 .google-link-wrap .google-link {
-    width: 254px;
     padding: 16px 14px;
-    font-size: 17px;
+    font-size: 14px;
+    line-height: 20px;
     border: 1px solid var(--gray-400);
     border-radius: 8px;
 }
 
 .google-link-wrap .google-link svg {
+    width: 20px;
+    height: 20px;
     margin-right: 6px;
 }
 
-.google-link-wrap .icon {
-    margin-right: -2px;
-}
+/*.google-link-wrap .icon {*/
+/*    margin: 0 auto;*/
+/*}*/
 
 /*Form-sign-up*/
 
@@ -310,10 +333,8 @@ form .form-bottom {
 }
 
 .form-log-in .link-forgot-password {
-    margin-bottom: 27px;
+    margin-bottom: 28px;
     font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
 }
 
 .form-log-in .btn {
@@ -340,11 +361,11 @@ form .form-bottom {
 
 .form-log-in .error-message .error-description {
     font-weight: 600;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 20px;
 }
 
-    /*Verify-menu*/
+/*Verify-menu*/
 
 aside .side-menu.verify-menu.side-active {
     display: flex;
@@ -359,8 +380,8 @@ aside .side-menu .verify-description {
     max-width: 380px;
     margin: 0 0 16px 0;
     font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
     color: var(--gray-700);
 }
 
@@ -371,8 +392,8 @@ aside .btn-with-email {
     border: none;
     border-radius: 8px;
     font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
     color: var(--dark);
     background-color: var(--gray-200);
 }
@@ -380,24 +401,22 @@ aside .btn-with-email {
 aside .side-menu .resend-message,
 aside .side-menu .wrong-email {
     padding-top: 16px;
-    margin-bottom: 40px;
+    margin-bottom: 48px;
     border-top: 1px solid var(--gray-400);
 }
 
-aside .side-menu .resend-message .link {
-    font-size: 18px;
+aside .side-menu .link {
+    font-size: 14px;
+    line-height: 20px;
 }
 
 aside .side-menu .resend-message .resend-title,
 aside .side-menu .wrong-email .wrong-title {
-    margin: 0 0 16px 0;
+    margin: 0 0 12px 0;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 28px;
 }
 
-
-    /*Modal window*/
+/*Modal window*/
 
 .container-modal {
     position: fixed;
@@ -419,10 +438,13 @@ aside .side-menu .wrong-email .wrong-title {
     display: flex;
     flex-direction: column;
     width: 540px;
-    height: 300px;
     padding: 24px;
     background-color: var(--white);
     border-radius: 8px;
+}
+
+.container-modal .div {
+    padding-left: 4px;
 }
 
 .container-modal .modal-window .modal-header {
@@ -431,14 +453,18 @@ aside .side-menu .wrong-email .wrong-title {
     justify-content: space-between;
 }
 
+.container-modal .modal-window .modal-header {
+    margin-bottom: 18px;
+}
+
 .container-modal .modal-window .modal-header .modal-title {
-    width: 87%;
-    margin: 0 0 12px 0;
+    margin: 0;
 }
 
 .container-modal .modal-window .modal-header .modal-close {
-    width: 40px;
+    min-width: 40px;
     height: 40px;
+    padding: 8px;
     border: none;
     background-color: var(--purple-100);
     border-radius: 50%;
@@ -452,6 +478,10 @@ aside .side-menu .wrong-email .wrong-title {
     background-color: var(--purple-200);
 }
 
+.container-modal .modal-window .modal-header .modal-close svg {
+    display: block;
+}
+
 .container-modal .modal-window .div label:before {
     border-color: var(--gray-600);
 }
@@ -460,15 +490,13 @@ aside .side-menu .wrong-email .wrong-title {
     margin-bottom: 44px;
 }
 
-.container-modal .modal-window .div .custom-checkbox + label{
-    font-size: 16px;
-}
-
-.container-modal .modal-window .btn {
-    font-size: 16px;
+.container-modal .btn {
+    margin-bottom: 0;
 }
 
 @media screen and (max-width: 1919px) {
+
+
 
     /*Navigation*/
 
@@ -498,44 +526,132 @@ aside .side-menu .wrong-email .wrong-title {
         width: 260px;
     }
 
-    .div .custom-checkbox + label {
-        font-size: 17px;
-    }
-
-    /*Google auth*/
-
-    .google-link-wrap .google-link {
-        width: 84%;
-    }
-
-    /*Verify-menu*/
-
-    aside .side-menu .verify-title {
-        margin-right: 84px;
-    }
 }
 
 @media screen and (max-width: 1279px)  {
+
+    h2 {
+        font-size: 24px;
+        line-height: 28px;
+    }
+
     /*Aside*/
 
     aside {
         min-width: 410px;
     }
 
+    aside .side-menu {
+        padding: 16px;
+    }
+
     aside .side-menu .btn-wrap .button {
-        width: 162px;
+        width: 172px;
+        padding: 12px;
+    }
+
+    aside .side-menu .btn-wrap {
+        margin-bottom: 28px;
+    }
+
+    form .text-field {
+        margin-bottom: 12px;
+    }
+
+    .text-field_floating .text-field__label,
+    .text-field_floating .text-field__label-error {
+        top: 16px;
+    }
+
+    .text-field__input {
+        height: 52px;
+    }
+
+    .text-field_floating .text-field__input:focus~.text-field__label,
+    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label,
+    .text-field_floating .text-field__input:focus~.text-field__label-error,
+    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label-error {
+        transform: translateY(-8px);
+    }
+
+    .text-field_floating .text-field__input:focus~.text-field__label + .icon-password,
+    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label + .icon-password,
+    .text-field_floating .text-field__input:focus~.text-field__label-error + .icon-password,
+    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label-error + .icon-password {
+        transform: translateY(9px);
+    }
+
+    .form-bottom .div {
+        padding-left: 2px;
+    }
+
+    .div .custom-checkbox + label:before {
+        width: 14px;
+        height: 14px;
+    }
+
+    .div label:before {
+        margin-right: 12px;
+    }
+
+    .btn {
+        padding: 16px;
+        margin-bottom: 20px;
     }
 
     /*Google auth*/
 
-    .google-link-wrap .google-link {
-        width: 254px;
+    .google-title {
+        margin-bottom: 12px;
+    }
+
+    .google-link-wrap .icon svg {
+        height: 22px;
+        width: 22px;
+    }
+
+    .google-link-wrap .icon {
+        margin-right: 0;
     }
 
     /*Verify*/
 
-    aside .side-menu .verify-title {
-        margin-right: 1px;
+    aside .btn-with-email {
+        margin-bottom: 60px;
+    }
+
+    aside .side-menu .resend-message .resend-title,
+    aside .side-menu .wrong-email .wrong-title {
+        margin-bottom: 10px;
+    }
+
+    aside .side-menu .resend-message,
+    aside .side-menu .wrong-email {
+        margin-bottom: 46px;
+    }
+
+    /*Modal*/
+
+    .container-modal .modal-window {
+        width: 440px;
+    }
+
+    .container-modal .modal-window .modal-header {
+        margin-bottom: 6px;
+    }
+
+    .container-modal .modal-window .div {
+        margin-bottom: 34px;
+    }
+
+    /*Log in*/
+
+    .form-log-in .link-forgot-password {
+        margin-bottom: 24px;
+    }
+
+    .form-log-in .btn {
+        margin-bottom: 28px;
     }
 
 }
@@ -558,18 +674,18 @@ aside .side-menu .wrong-email .wrong-title {
 
     aside {
         min-width: 100%;
-        padding: 26px 15px;
+        padding: 16px;
     }
 
     aside .side-menu {
-        padding: 25px 15px;
+        padding: 24px 14px;
     }
 
     aside .logo-full {
         display: block;
         align-self: center;
         height: 24px;
-        margin-bottom: 25px;
+        margin-bottom: 26px;
     }
 
     aside .side-menu .recover-wrap .btn {
@@ -582,57 +698,17 @@ aside .side-menu .wrong-email .wrong-title {
     }
 
     aside .side-menu .btn-wrap .button {
-        min-width: 152px;
+        min-width: 150px;
         width: auto;
-        padding: 12px;
+        padding: 14px;
         font-size: 20px;
         line-height: 24px
     }
 
     /*Form*/
 
-    .text-field_floating .text-field__label,
-    .text-field_floating .text-field__label-error {
-        top: 20px;
-        left: 10px;
-        font-size: 16px;
-        line-height: 20px;
-    }
-
-    .text-field__input {
-        height: 60px;
-    }
-
-    .icon-password {
-        top: 22px;
-        right: 12px;
-        width: 20px;
-        height: 20px;
-    }
-
-    .icon-password img {
-        width: 20px;
-        height: 20px;
-    }
-
-    .text-field_floating .text-field__input:focus~.text-field__label + .icon-password,
-    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label + .icon-password,
-    .text-field_floating .text-field__input:focus~.text-field__label-error + .icon-password,
-    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label-error + .icon-password {
-        transform: translateY(10px);
-    }
-
-    .icon-password svg {
-        height: 20px;
-        width: 20px;
-    }
-
-    form .text-field {
-        margin-bottom: 12px;
-    }
-
     form .text-field .password-description {
-        margin: 4px 0 0 8px;
+        margin-left: 12px;
         font-size: 12px;
         line-height: 14px;
     }
@@ -643,50 +719,19 @@ aside .side-menu .wrong-email .wrong-title {
 
     /*Checkbox*/
 
-    .div .custom-checkbox + label:before {
-        width: 18px;
-        height: 18px;
-    }
-
-    .div label:before {
-        margin-right: 12px;
-    }
-
-    .div .custom-checkbox + label {
-        font-size: 16px;
-        line-height: 20px;
-        font-weight: 600;
-    }
 
     .div {
-        margin-bottom: 25px;
+        margin-bottom: 22px;
     }
 
     /*Button*/
 
     .btn {
         padding: 16px;
-        margin-bottom: 24px;
-        font-size: 16px;
-        line-height: 20px;
+        margin-bottom: 20px;
     }
 
     /*Google auth*/
-
-    .google-title {
-        margin-bottom: 12px;
-        font-size: 16px;
-    }
-
-    .google-link-wrap .icon svg {
-        height: 22px;
-        width: 22px;
-    }
-
-    .google-link-wrap .google-link {
-        width: 219px;
-        font-size: 15px;
-    }
 
     .google-link-wrap .google-link svg {
         height: 20px;
@@ -697,13 +742,11 @@ aside .side-menu .wrong-email .wrong-title {
     /*Form log in*/
 
     .form-log-in .link-forgot-password {
-        margin-bottom: 23px;
-        font-size: 16px;
-        line-height: 20px;
+        margin-bottom: 24px;
     }
 
     .form-log-in .btn {
-        margin-bottom: 28px;
+        margin-bottom: 24px;
     }
 
     /*Verify*/
@@ -713,30 +756,12 @@ aside .side-menu .wrong-email .wrong-title {
         line-height: 28px;
     }
 
-    aside .side-menu .verify-description {
-        font-size: 16px;
-        line-height: 20px;
-    }
-
     aside .btn-with-email {
-        padding: 16px 10px;
-        margin-bottom: 60px;
-        font-size: 16px;
-        line-height: 20px;
-    }
-
-    aside .side-menu .resend-message, aside .side-menu .wrong-email {
-        padding-top: 18px;
-        margin-bottom: 38px;
-    }
-
-    aside .side-menu .resend-message .link {
-        font-size: 16px;
+        padding: 16px 12px;
     }
 
     aside .side-menu .resend-message .resend-title,
     aside .side-menu .wrong-email .wrong-title  {
-        margin-bottom: 15px;
         font-weight: 600;
         font-size: 20px;
         line-height: 24px;
@@ -746,13 +771,10 @@ aside .side-menu .wrong-email .wrong-title {
 
     .container-modal .modal-window {
         width: 342px;
-        height: 248px;
     }
 
-    .container-modal .modal-window .modal-header .modal-title {
+    .container-modal .modal-window .modal-header {
         margin-bottom: 18px;
-        font-size: 22px;
-        line-height: 28px;
     }
 
     .container-modal .modal-window .div .custom-checkbox + label {
@@ -769,9 +791,4 @@ aside .side-menu .wrong-email .wrong-title {
         margin-bottom: 34px;
     }
 
-    .container-modal .modal-window .btn {
-        padding: 26px;
-        font-size: 14px;
-        line-height: 20px;
-    }
 }
